# RayTracer

./: .gitignore  AABB.cpp  AABB.h  BRDFParams.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Colorizer.cpp  Colorizer.h  LensCamera.cpp  LensCamera.h  Lights.cpp  Lights.h  Mat3x3.cpp  Mat3x3.h  Mat4x4.cpp  Mat4x4.h  Materials.cpp  Materials.h  Mesh.cpp  Mesh.h  MeshObject.cpp  MeshObject.h  Octree.cpp  Octree.h  OctreeNode.h  Parser.cpp  Parser.h  PinHoleCamera.cpp  PinHoleCamera.h  Pixel.cpp  Pixel.h  ProgressReporter.cpp  ProgressReporter.h  README.md  Ray.cpp  Ray.h  RayCastHit.h  (+33 more)
ComplexScene/: resources.json  scene11.json
cxxopts/: cxxopts.hpp
lodepng/: CMakeLists.txt
