cmake_minimum_required(VERSION 3.6)
project(raytracer)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB HEADER_FILES *.h cxxopts/*.hpp)
add_subdirectory(libjpeg)
add_subdirectory(lodepng)
add_executable(raytracer ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(raytracer jpeg lodepng)