cmake_minimum_required(VERSION 3.6)
project(raytracer)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
file(GLOB SOURCE_FILES *.cpp)
file(GLOB HEADER_FILES *.h cxxopts/*.hpp)
find_package(JPEG REQUIRED)
add_subdirectory(lodepng)
set_target_properties(lodepng PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
include_directories(${JPEG_INCLUDE_DIR})
add_executable(raytracer ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(raytracer ${JPEG_LIBRARY} lodepng)